# aoc-2023-rs

./: Cargo.toml  README.md  day_template.rs.txt  justfile
d01/: README.md
d01/src/: lib.rs
d02/src/: lib.rs
solutions/d02/src/: lib.rs
solutions/d03/: README.txt
solutions/d03/src/: lib.rs
solutions/d04/: README.txt
solutions/d04/src/: lib.rs
solutions/d05/: README.txt
solutions/d05/src/: lib.rs
solutions/d06/src/: lib.rs
solutions/d07/src/: lib.rs
solutions/d08/: README.txt
solutions/d08/src/: lib.rs
solutions/d13/src/: lib.rs
src/: main.rs
