[package]
name = "aoc-2023-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "solutions/d01",
    "solutions/d02",
    "solutions/d03",
]

[dependencies]
d01 = { path = "./solutions/d01" }
d02 = { path = "./solutions/d02" }
d03 = { path = "./solutions/d03" }
