[package]
name = "aoc-2023-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "solutions/d01",
    "solutions/d02",
    "solutions/d03",
    "solutions/d04",
    "solutions/d05",
    "solutions/d06",
    "solutions/d07",
    "solutions/d08",
]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
d01 = { path = "./solutions/d01" }
d02 = { path = "./solutions/d02" }
d03 = { path = "./solutions/d03" }
d04 = { path = "./solutions/d04" }
d05 = { path = "./solutions/d05" }
d06 = { path = "./solutions/d06" }
d07 = { path = "./solutions/d07" }
d08 = { path = "./solutions/d08" }
